# nar-mechinterp

./: .gitignore  README.md  __init__.py  main.py  pyproject.toml  requirements.txt
configs/: default_config.yaml
data/: __init__.py  clrs_dataset.py  multi_algorithm.py
experiments/: 01_train_nar.ipynb  02_train_sae.ipynb  03_analyze.ipynb  __init__.py  analyze_circuits.py  analyze_features.py  run_acdc.py  run_experiments.ipynb  train_nar.py  train_sae.py
interp/: __init__.py  acdc.py  activation_collector.py  activation_patching.py  circuit.py  concept_labels.py  feature_analysis.py  linear_probes.py  metrics.py  sae.py
models/: __init__.py  nar_model.py  processor.py
scripts/: patch_salsaclrs.py
tests/: test_acdc.py  test_activation_collector.py  test_activation_patching.py  test_circuit.py  test_clrs_dataset.py  test_concept_labels.py  test_feature_analysis.py  test_hooks.py  test_metrics.py  test_nar_integration.py  test_nar_model.py  test_processor.py  test_sae.py
utils/: __init__.py  clrs_metrics.py  correlation.py  evaluation.py  hooks.py  visualization.py
