[project]
name = "nar-mechinterp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dm-haiku>=0.0.16",
    "einops>=0.8.2",
    "graphviz>=0.21",
    "hydra-core>=1.3.2",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jax>=0.9.0",
    "jaxlib>=0.9.0",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "omegaconf>=2.3.0",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pyyaml>=6.0.3",
    "rich>=14.3.2",
    "salsa-clrs",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "torch-geometric>=2.7.0",
    "tqdm>=4.67.3",
    "wandb>=0.24.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["models", "data", "interp", "utils", "experiments"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv.sources]
salsa-clrs = { git = "https://github.com/jkminder/SALSA-CLRS.git" }
